src/types/tests/snapshots/tgbot__types__tests__inline_mode__inline_query_result_mpeg4_gif.snap
---
source: src/types/tests/inline_mode.rs
expression: "InlineQueryResult::from(result.clone().with_caption(\"caption\").with_input_message_content(InputMessageContentText::new(\"text\")).with_mpeg4_width(200).with_mpeg4_height(300).with_mpeg4_duration(400).with_caption_parse_mode(ParseMode::Markdown).with_thumbnail_mime_type(\"video/mp4\").with_title(\"title\").with_reply_markup([[InlineKeyboardButton::for_url(\"text\",\n\"url\")]]).with_show_caption_above_media(true),)"
---
{
  "caption": "caption",
  "input_message_content": {
    "message_text": "text"
  },
  "mpeg4_duration": 400,
  "mpeg4_height": 300,
  "mpeg4_url": "url",
  "mpeg4_width": 200,
  "parse_mode": "Markdown",
  "reply_markup": {
    "inline_keyboard": [
      [
        {
          "text": "text",
          "url": "url"
        }
      ]
    ]
  },
  "show_caption_above_media": true,
  "thumbnail_mime_type": "video/mp4",
  "thumbnail_url": "thumb-url",
  "title": "title",
  "id": "id",
  "type": "mpeg4_gif"
}
