src/types/tests/snapshots/tgbot__types__tests__inline_mode__inline_query_result_photo-2.snap
---
source: src/types/tests/inline_mode.rs
expression: "InlineQueryResult::from(result)"
---
{
  "photo_url": "url",
  "thumbnail_url": "thumb-url",
  "id": "id",
  "type": "photo"
}
