src/types/tests/snapshots/tgbot__types__tests__inline_mode__inline_query_result_venue-2.snap
---
source: src/types/tests/inline_mode.rs
expression: "InlineQueryResult::from(result)"
---
{
  "address": "addr",
  "latitude": 1.0,
  "longitude": 2.0,
  "title": "title",
  "id": "id",
  "type": "venue"
}
