src/types/tests/snapshots/tgbot__types__tests__inline_mode__inline_query_result_venue.snap
---
source: src/types/tests/inline_mode.rs
expression: "InlineQueryResult::from(result.clone().with_foursquare_id(\"f-id\").with_foursquare_type(\"f-type\").with_google_place_id(\"g-id\").with_google_place_type(\"g-type\").with_input_message_content(InputMessageContentText::new(\"text\")).with_reply_markup([[InlineKeyboardButton::for_url(\"text\",\n\"url\")]]).with_thumbnail_height(300).with_thumbnail_url(\"thumb-url\").with_thumbnail_width(200),)"
---
{
  "address": "addr",
  "foursquare_id": "f-id",
  "foursquare_type": "f-type",
  "google_place_id": "g-id",
  "google_place_type": "g-type",
  "input_message_content": {
    "message_text": "text"
  },
  "latitude": 1.0,
  "longitude": 2.0,
  "reply_markup": {
    "inline_keyboard": [
      [
        {
          "text": "text",
          "url": "url"
        }
      ]
    ]
  },
  "thumbnail_height": 300,
  "thumbnail_url": "thumb-url",
  "thumbnail_width": 200,
  "title": "title",
  "id": "id",
  "type": "venue"
}
