src/types/tests/snapshots/tgbot__types__tests__inline_mode__inline_query_result_video-2.snap
---
source: src/types/tests/inline_mode.rs
expression: "InlineQueryResult::from(result)"
---
{
  "mime_type": "mime",
  "thumbnail_url": "thumb-url",
  "title": "title",
  "video_url": "url",
  "id": "id",
  "type": "video"
}
