src/types/tests/snapshots/tgbot__types__tests__inline_mode__inline_query_result_voice-2.snap
---
source: src/types/tests/inline_mode.rs
expression: "InlineQueryResult::from(result)"
---
{
  "title": "voice-title",
  "voice_url": "voice-url",
  "id": "voice-id",
  "type": "voice"
}
