src/types/tests/snapshots/tgbot__types__tests__inline_mode__inline_query_result_voice.snap
---
source: src/types/tests/inline_mode.rs
expression: "InlineQueryResult::from(result.clone().with_caption(\"voice-caption\").with_input_message_content(InputMessageContentText::new(\"voice-content-text\")).with_caption_parse_mode(ParseMode::Markdown).with_reply_markup([[InlineKeyboardButton::for_url(\"voice-kb-text\",\n\"voice-kb-url\")]]).with_voice_duration(100),)"
---
{
  "caption": "voice-caption",
  "input_message_content": {
    "message_text": "voice-content-text"
  },
  "parse_mode": "Markdown",
  "reply_markup": {
    "inline_keyboard": [
      [
        {
          "text": "voice-kb-text",
          "url": "voice-kb-url"
        }
      ]
    ]
  },
  "title": "voice-title",
  "voice_duration": 100,
  "voice_url": "voice-url",
  "id": "voice-id",
  "type": "voice"
}
